Revision history for PDL::NDBin

{{$NEXT}}

0.016     2014-11-17 11:13:39CET+0100 Europe/Brussels

 - worked around a warning message emitted by the latest Perl development
   releases (RT #100228). Reported by Slaven Rezić (thank you!). (Edward
   Baudrez)

0.015     2013-12-11 11:56:13 Europe/Brussels

 - added PDL::Core::Dev to configure_requires (RT #91304) (Edward Baudrez)

0.014     2013-12-10 14:24:54 Europe/Brussels

 - tests started failing with recent development versions of PDL (2.007_01 or
   2.007_02, not sure). Fixed now. (Edward Baudrez)

0.013     2013-12-06 09:01:39 Europe/Brussels

 - added 64-bit support. PDL::NDBin will take advantage of 64-bit support with
   recent versions of PDL (2.007 or later), but should work with earlier
   versions, as well. Note that 64-bit support has not been tested very well
   yet, so it qualifies as 64-bit "safe" until I find time for more testing.
   But PDL::NDBin should now at least install on PDL 2.007 or later. (Edward
   Baudrez)

0.012     2013-07-02 11:13:46 Europe/Brussels

 - fixed the tests to work with the latest development release of PDL
   (2.006_03) (Edward Baudrez)

0.011     2013-03-15 09:55:16 Europe/Brussels

 - try to avoid test failures with old versions of Module::Pluggable (Edward
   Baudrez)
 - changed the syntax to specify the type of the output piddle in the action
   class constructors. Previously, this was achieved by passing a coderef:
      PDL::NDBin::Action::Avg->new( ..., type => \&PDL::double );
   This has now changed to
      type => double         # or 'type => PDL::double'
   The new syntax is simpler and arguably clearer. (Edward Baudrez)
 - implemented the action classes PDL::NDBin::Action::Min and
   PDL::NDBin::Action::Max (Edward Baudrez)
 - various minor fixes (Edward Baudrez)

0.010     2013-03-07 11:09:22 Europe/Brussels

 - release on master branch instead of development branch; no changes

0.009     2013-03-07 11:01:19 Europe/Brussels
