@@ -2,6 +2,8 @@ Revision history for PDL::NDBin
 
 {{$NEXT}}
 
+ - add support for variable-width bins (Diab Jerius)
+
 0.016     2014-11-17 11:13:39CET+0100 Europe/Brussels
 
  - worked around a warning message emitted by the latest Perl development
